FIX SECTION: Categories  -> grid-row-gap

--- a/client/src/components/Categories/Categories.module.css
+++ b/client/src/components/Categories/Categories.module.css
@@ -13,7 +13,8 @@
 .listCategories {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  gap: 1rem;
+  column-gap: 1rem;
+  row-gap: 5.5rem;
 }
 
 .categorie {
